--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -22,6 +22,16 @@
       <tr>
         <td>
           <a href="kanto/kanto.html">
+            <h2>Kanto</h2>
+          </a>
+        </td>
+        <td>
+          <strong>134</strong>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="johto/johto.html">
             <h2>Kanto</h2>
           </a>
         </td>
