--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
+pokemons_smx
 
 <head>
   <meta charset="UTF-8">
@@ -31,8 +32,17 @@
       </tr>
       <tr>
         <td>
+          <a href="transformers/.html">
+          </a>
+        </td>
+        <td>
+          <strong>134</strong>
+        </td>
+      </tr>
+      <tr>
+        <td>
           <a href="johto/johto.html">
-            <h2>Kanto</h2>
+            <h2>johto</h2>
           </a>
         </td>
         <td>
@@ -42,8 +52,8 @@
       <!-- Comentari, per crear una nova línia copiar totes les línies que van des de <tr> fins a </tr> -->
       <tr>
         <td>
-          <a href="johto/johto.html">
-            <h2>Johto</h2>
+          <a href="transformers/.html">
+            <h2>transformers</h2>
           </a>
         </td>
         <td>
