--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="es"> 
-pokemons_smx
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -32,17 +31,8 @@ pokemons_smx
       </tr>
       <tr>
         <td>
-          <a href="transformers/.html">
-          </a>
-        </td>
-        <td>
-          <strong>134</strong>
-        </td>
-      </tr>
-      <tr>
-        <td>
           <a href="johto/johto.html">
-            <h2>johto</h2>
+            <h2>Kanto</h2>
           </a>
         </td>
         <td>
@@ -52,8 +42,8 @@ pokemons_smx
       <!-- Comentari, per crear una nova línia copiar totes les línies que van des de <tr> fins a </tr> -->
       <tr>
         <td>
-          <a href="transformers/.html">
-            <h2>transformers</h2>
+          <a href="johto/johto.html">
+            <h2>Johto</h2>
           </a>
         </td>
         <td>
